# mh-gateway

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
docs/: adapter-migration-guide.md  build-guide.md  customer-adaptation-guide.agent.md  customer-adaptation-guide.md  dev-guide.agent.md  dev-guide.md  permission-guide.md
scripts/: capture_openapi.py
src/mh_gateway/: __init__.py  adapters.py  app.py  config.py  config_manager.py  config_protocols.py  context.py  llm.py  main.py  session.py
src/mh_gateway/api/: agents.py  auth.py  auth_routes.py  chat.py  component_sources.py  dependencies.py  guide.py  locale.py  management.py  router.py  runtime_tools.py  scenarios.py  sessions.py  tools.py
src/mh_gateway/auth/: __init__.py  protocols.py
src/mh_gateway/builtin_agents/: __init__.py  local_tools.py  registry.py
src/mh_gateway/database/: __init__.py  _ids.py  _memory_store.py  _protocol.py  _session.py
src/mh_gateway/eval/: __init__.py  api.py  runner.py  storage.py  types.py
src/mh_gateway/monitoring/: __init__.py  api.py  collector.py  health.py  middleware.py
src/mh_gateway/services/: audit_middleware.py  compaction.py  database.py  m2m_auth.py  outbound_auth.py  perm_middleware.py  runtime_service.py
src/mh_gateway/static/: index.html
src/mh_gateway/static/assets/: index-D9Iil7Lx.css  index-DoZo4ydH.js  index-DsWExwq1.css  index-IOitT5h3.js
tests/: baseline_openapi.json  conftest.py  test_access_log_context.py  test_api.py  test_event_schema.py  test_exports_and_safe_fixes.py  test_monitoring.py  test_openapi_baseline.py
(+1 files in other folders)
